--- a/app.json
+++ b/app.json
@@ -26,10 +26,10 @@
 			"required": false,
 			"value": "Google:tmp"
 		},
-		"RCLONE_DESTINATION2": {
-			"description": "Rclone destination path, format \"[drivename A]:[remove path A]\"",
+		"RCLONE_DESTINATION_2": {
+			"description": "If you mount a second cloud drive, then fill in \"[drivename B]:[remove path B]\"",
 			"required": false,
-			"value": "Google:tmp"
+			"value": "OneDrive:tmp"
 		},
         "SHTLINK":{
             "description": "色华堂域名，如果默认值可以访问可以不用更改, default: https://www.sehuatang.org/",
