--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-	"name": "heroku_download",
+	"name": "Heroku Aria SHT",
 	"addons": [
 		{
 		  "plan": "heroku-postgresql:hobby-dev"
@@ -26,11 +26,16 @@
 			"required": false,
 			"value": "Google:tmp"
 		},
-		"RCLONE_DESTINATION_2": {
-			"description": "If you mount a second cloud drive, then fill in \"[drivename B]:[remove path B]\"",
-			"required": false,
-			"value": "OneDrive:tmp"
+        "SHTLINK":{
+            "description": "色华堂域名，如果默认值可以访问可以不用更改, default: https://www.sehuatang.org/",
+            "required": false,
+            "value": "https://www.sehuatang.org/"
 		},
+		"CFLINK":{
+			"description": "CF Fetch Bot link. Experimental, Optional, eg: https://abc.workers.dev/ ",
+            "required": false,
+            "value": ""			
+		}
 	},
 	"buildpacks": [
 		{
